# alcli

./: .gitignore  .gitlint  README.md  pyproject.toml
.github/workflows/: build.yml
src/: __main__.py  alcli.py  auth.py  cli.py  config.py  exceptions.py  requests.py  site.py  types.py  utils.py
src/utils/: api.py  click.py  console.py
