[tool.poetry]
name = "alcli"
version = "0.1.0"
description = ""
authors = ["m4dz <code@m4dz.net>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
shellingham = "^1.5.0.post1"
requests = "^2.28.2"
tabulate = "^0.9.0"
chardet = "^5.1.0"
platformdirs = "^3.0.0"

[tool.poetry.scripts]
alwaysdata = "src.__main__:main"

[tool.poetry.group.build.dependencies]
nuitka = "^1.4"
zstandard = "^0.19.0"
ordered-set = "^4.1.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
